# eclinic_healthcare

./: .gitignore  DEPLOYMENT.md  PREREQUISITES_WINDOWS.md  TEST_CASES.md  render.yaml
backend/chat-service/: .env.example  .gitignore  Dockerfile  (+7 more)
backend/webinar/: .gitignore  API_REFERENCE.md  Dockerfile  README.md  TOKEN_GENERATION_PROCESS.md  VIDEO_SESSION_FRONTEND_FLOW.md  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/webinar/alembic/: env.py
backend/webinar/alembic/versions/: 20250122000001_add_readiness_flags_to_video_sessions.py  20250127000001_add_in_channel_flags_to_video_sessions.py
backend/webinar/app/: main.py
backend/webinar/app/api/rest/: video_sessions.py  webinars.py
backend/webinar/app/core/: config.py  exceptions.py  logging.py  security.py
backend/webinar/app/db/: models.py  models_video_session.py  models_video_session_audit.py
backend/webinar/app/schemas/: video_session.py  video_session_proxy.py  webinar.py
backend/webinar/app/scripts/: __init__.py  mark_expired_webinars.py
backend/webinar/app/services/: agora_service.py  video_session_audit_service.py  video_session_redis_service.py  video_session_service.py  video_session_state_service.py  webinar_service.py
backend/webinar/docker/: cron-entrypoint.sh  entrypoint.sh
frontend/: .env.local.example  .gitignore  .npmrc  AGORA_SETUP.md  bitbucket-pipelines.yml  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
(+1020 files in other folders)
